More mult splines

--- a/common/ryantibs.bib
+++ b/common/ryantibs.bib
@@ -1,12 +1,32 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Ryan Tibshirani at 2023-01-25 23:11:40 -0800 
+%% Created for Ryan Tibshirani at 2023-01-31 21:02:34 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{deboor2009way,
+	author = {Carl de Boor},
+	booktitle = {Multiscale, Nonlinear and Adaptive Approximation},
+	date-added = {2023-01-31 20:54:54 -0800},
+	date-modified = {2023-01-31 21:02:33 -0800},
+	title = {The way things were in multivariate splines: {A} personal view},
+	year = {2009}}
+
+@book{deboor1993box,
+	author = {Carl de Boor and Klaus H{\"o}llig and Sherman Riemenschneider},
+	date-added = {2023-01-31 20:49:41 -0800},
+	date-modified = {2023-01-31 20:53:55 -0800},
+	publisher = {Springer},
+	title = {Box Splines},
+	year = {1993}}
+
+@book{cite-key,
+	date-added = {2023-01-31 20:49:02 -0800},
+	date-modified = {2023-01-31 20:49:02 -0800}}
 
 @article{demmler1975oscillation,
 	author = {A. Demmler and Christian Reinsch},
@@ -1607,8 +1627,9 @@
 	title = {{Kalman Filter}, sensor fusion, and constrained regression: equivalences and insights},
 	year = {2019}}
 
-@article{lai2007spline,
+@book{lai2007spline,
 	author = {Ming-Jun Lai and Larry L. Schumaker},
+	date-modified = {2023-01-31 20:47:55 -0800},
 	publisher = {Cambridge University Press},
 	title = {Spline Functions on Triangulations},
 	year = {2007}}
