--- a/lectures/splines_rkhs/splines_rkhs.tex
+++ b/lectures/splines_rkhs/splines_rkhs.tex
@@ -112,16 +112,17 @@ where $\beta_1,\dots,\beta_{r+k+1} \in \R$ are coefficients and
 $g_1,\dots,g_{r+k+1}$ is a basis for the space of $k\th$ degree splines over the
 knots $t_1,\dots,t_r$; for example, the truncated power basis or B-spline basis.    
 
-Letting $Y=(y_1,\dots,y_n) \in \R^n$ denote the response vector, and defining
-the basis matrix $G \in \R^{n \times (r+k+1)}$ as before, to have entries
+Letting $Y=(y_1,\dots,y_n) \in \R^n$ be the response vector, and $G \in \R^{n
+  \times (r+k+1)}$ the basis matrix with entries   
 \[
 G_{ij} = g_j(x_i),
 \]
-we then just use least squares regression to determine estimate the
-coefficients, defining \smash{$\hbeta = (\hbeta_1,\dots,\hbeta_{r+k+1})$} to
+as before, we then just use least squares to determine estimate the
+coefficients, defining \smash{$\hbeta = (\hbeta_1,\dots,\hbeta_{r+k+1})$} to 
 solve 
 \[
-\minimize_\beta \; \|Y - G\beta\|_2^2.
+\minimize_\beta \; \sum_{i=1}^n \bigg(y_i -\sum_{j=1}^{r+k+1} \beta_j g_j(x_i) 
+\bigg)^2 \iff \minimize_\beta \; \|Y - G\beta\|_2^2.
 \]
 This yields the \emph{regression spline} estimator, which makes predictions
 according to   
@@ -483,10 +484,10 @@ with respect to draws of $(x_i,y_i)$, $i=1,\dots,n$.
 
 \section{Sobolev theory*}
 
-In something like an interlude, we use this section to introduce Sobolev
+In somewhat of an interlude, we use this section to introduce Sobolev
 spaces. This material can be mostly skipped without interrupting the flow of
 understanding the main ideas in the rest of this lecture, hence the
-asterisk. Well actually, you should probably read the definition of weak
+asterisk. Well actually, you should probably read the definition of weak 
 differentiability, but you can treat the rest as optional. Yes, optional, but
 also super interesting and fairly fundamental in many ways, which is why we
 include some of the core details of Sobolev spaces here. To learn more, an
@@ -515,9 +516,9 @@ because $\phi$ has compact support. Thus, we define the weak derivative $g = Df$
 such that this holds for all infinitely differentiable compactly-supported
 $\phi$.
 
-Higher-order derivatives follow similarly. For a multi-index
-$\alpha=(\alpha_1,\dots,\alpha_d) \in \Z^d_+$, recall, we write $|\alpha| =
-\alpha_1 + \cdots + \alpha_d$ and we denote  
+Higher-order derivatives follow similarly. For a multi-index $\alpha =
+(\alpha_1,\dots,\alpha_d) \in \Z^d_+$, recall, we write $|\alpha| = \alpha_1 +
+\cdots + \alpha_d$ and we denote   
 \[
 D^\alpha \phi = \frac{\partial^{|\alpha|} \phi}{\partial x_1^{\alpha_1} \partial 
   x_2^{\alpha_2} \dots \partial x_d^{\alpha_d}},
@@ -773,11 +774,11 @@ all orders less than $k$. Then in general this is going to be tricky to fulfill
 when $d \geq 2$. This is essentially due to the number in the number of
 constraints such continuity imposes in the multivariate setting. Recall that a
 $k\th$ degree polynomial in $d$ dimensions is of the form (using multi-index
-notation $\alpha = (\alpha_1,\dots,\alpha_d) \in \Z^d_+$):            
+notation $\alpha = (\alpha_1,\dots,\alpha_d) \in \Z^d_+$):
 \begin{equation}
 \label{eq:poly}
 f(x) = \sum_{|\alpha| \leq k} \beta_\alpha \, x_1^{\alpha_1} x_2^{\alpha_2}
-\dots x_d^{\alpha_d}   
+\dots x_d^{\alpha_d},
 \end{equation}
 for coefficients $\beta_\alpha$, $|\alpha| \leq k$. The number of coefficients,
 and hence the dimension of the space of $k\th$ degree polynomials in $d$
@@ -801,9 +802,9 @@ It can be shown that this reduces to 10 constraints on the coefficients; but
 importantly, the structure of these constraints is such that, for a given set of
 values at the vertices of the triangles, it is unclear whether there will exist
 a set of coefficients that satisfies the constraints \emph{and} meets the
-prescribed  values at the vertices. This basically happens because particular
-coefficients are entangled in too many linear constraints. Figure
-\ref{fig:c1_constraints} gives an illustration.          
+prescribed values at the vertices. This basically happens because the linear 
+constraints are all entangled. Figure \ref{fig:c1_constraints} gives an
+illustration.    
 
 To get around this problem we have to increase the degree of the polynomial. As
 it turns out, for quintic degree $k=5$, this problem doesn't occur for two
@@ -823,14 +824,13 @@ indeed $k=5$, and when $d=3$ it is $k=7$. This seems very wasteful.
 \centering
 \includegraphics[width=0.5\textwidth]{c1_cubic.png}
 \caption{\it Illustration of the constraints for $C^1$ smoothness, for a cubic
-  on each triangle, right: quintic degree $k=5$. Credit:
-  \citet{deboor2009way}. It turns out that a polynomial of an arbitrary degree
-  on a triangle can be written be in what is called B-form (in an expansion of 
-  Berstein basis polynomials), whose coefficients can be assigned to anchor
-  points drawn as open blue circles. When $k=3$, the set of coefficients that
-  are tied together in a linear equation needed for $C^1$ smoothness are drawn
-  as a red quadrilateral. There are two anchor points whose coefficients are 
-  simultaneously involved in three equations.}
+  on each triangle. Credit: \citet{deboor2009way}. A polynomial of an arbitrary
+  degree on a triangle can be written be in what is called a B-form (as an
+  expansion of what are called Bernstein basis polynomials), whose coefficients
+  can be assigned to anchor points, drawn above as blue circles. The set of
+  coefficients that are tied together in a linear equation needed for $C^1$
+  smoothness are drawn as a red quadrilateral. We see that the linear systems
+  are entangled, since they each overlap at an anchor point.}   
 \label{fig:c1_constraints}
 \end{figure}
 
@@ -841,11 +841,109 @@ more, two definitive references are \citet{deboor1993box} and
 
 \subsection{Tensor product splines}
 
+One way forward in the multivariate setting is just to take tensor
+products. Recall, a tensor product of two univariate functions $f_1,f_2$ on
+$[a,b]$ is denoted $f_1 \otimes f_2$, which is the function on $[a,b]^2$ defined
+as  
+\[
+(f_1 \otimes f_2)(x_1, x_2) = f_1(x_1) f_2(x_2). 
+\]
+Similarly, for any collection of $q \geq 2$ functions $f_1,\dots,f_q$, we can
+define the tensor product $f_1 \otimes f_2 \otimes \cdots \otimes f_q$ as a
+function 
+\[
+(f_1 \otimes f_2 \otimes \cdots \otimes f_q)(x_1, x_2, \dots, x_q) = f_1(x_1) 
+f_2(x_2) \dots f_q(x_q).
+\]
+
+Thus given a $k\th$ degree spline basis with $r$ knots $t_1,\dots,t_r$, which we
+denote by $g_1,\dots,g_N$ for $N=r+k+1$, we can take all $d$-way tensor
+products to form collection of functions on $[a,b]^d$:
+\[
+g_{j_1} \otimes g_{j_2} \otimes \cdots \otimes g_{j_d}, \quad \text{for all
+  $\ell = (j_1, j_2, \dots, j_d) \in [N]^d$}, 
+\]
+where we use the abbreviation $[N] = \{1,\dots,N\}$. By construction the linear
+span of this collection, i.e., functions of the form    
+\[
+f(x) = \sum_{j \in [N]^d} \beta_j \, g_{j_1}(x_1) \otimes \cdots \otimes 
+g_{j_d}(x_d),   
+\]
+for coefficients $\beta_j$, $j \in [N]^d$, generates the space of tensor 
+product splines 
+\[
+\Big\{ f_1 \otimes \cdots \otimes f_d : \text{each $f_\ell$ is a $k\th$ degree
+  spline with knots in $t_1,\dots,t_r$, for $\ell=1,\dots,d$} \Big\}.  
+\]
+Figure \ref{fig:tensor} displays a few tensor products of bivariate B-splines.
+
+\begin{figure}[htb]
+\centering
+\includegraphics[width=0.915\textwidth]{tensor.png}
+\caption{\it Bivariate tensor products of cubic B-splines. Credit: Chapter 5 of 
+  \citet{hastie2009elements}.}    
+\label{fig:tensor}
+\end{figure}
+
+To fit a tensor product spline from data, the simplest thing to do would be the 
+\emph{tensor product regression spline}, whose coefficients are given by solving  
+\[
+\minimize_\beta \; \sum_{i=1}^n \bigg(y_i -  \sum_{j \in [N]^d} \beta_j \,
+g_{j_1}(x_{i1}) \otimes \cdots \otimes g_{j_d}(x_{id}) \bigg)^2. 
+\]
+Denoting by $A \otimes B$ the Kronecker product of matrices $A,B$, and denoting
+by $G_\ell \in \R^{N \times N}$ the basis matrix for dimension $\ell$, with
+entries $[G_\ell]_{pq} = g_q(x_{p\ell})$, we can express the above in more
+compact form as  
+\[
+\minimize_\beta \; \big\| Y - (G_1 \otimes \cdots G_d) \beta \big\|_2^2. 
+\]
+As usual, given the solution \smash{$\hbeta$}, the tensor product regression
+spline makes predictions according to  
+\[
+\hf(x) = \sum_{j \in [N]^d} \hbeta_j \, g_{j_1}(x_1) \otimes \cdots \otimes 
+g_{j_d}(x_d).
+\]
+
+Few notes: there is no reason that the knots have to be the same along each 
+dimension, that is only done here for simplicity. We could have also used
+regularization, though for ``variationally-motivated'' regularization we'd turn 
+to thin-plate splines (covered next).
+
+\subsubsection{What are these functions?} 
+
+We should be clear that tensor product construction \emph{does not ``really'' 
+  give us a multivariate spline}, if we maintain that a spline is a $k\th$
+piecewise polynomial that is also $C^{k-1}$. A tensor product of univariate
+$k\th$ degree splines produces a function that is indeed $C^{k-1}$, and indeed
+a piecewise polynomial---it is a polynomial on hypercubes of the form    
+\[
+[t_{j_1}, t_{j_1+1}] \times \cdots \times [t_{j_d}, t_{j_d+1}]. 
+\]
+But it is \emph{not} necessarily a $k\th$ degree polynomial on these
+hypercubes. Rather, it is a tensor product of univariate $k\th$ degree
+polynomials. Technically, out of this we can get a polynomial of degree up to
+$k^d$, and at the same time, we can't actually generate any polynomial of degree
+$k^d$. We are restricted to functions of the form   
+\[
+f(x) = \sum_{\alpha_1,\dots,\alpha_d \leq k} \beta_\alpha \, x_1^{\alpha_1}
+x_2^{\alpha_2} \dots x_d^{\alpha_d}.
+\]
+There is important difference here, compared to \eqref{eq:poly}. As a concrete 
+example, take $k=1$ and $d=2$: then the tensor product of univariate linear
+functions give us (what are called bilinear) functions of the form
+\[
+1 + a x_1 + b x_2 + c x_1 x_2,
+\]
+which is \emph{not} linear, because of the cross term $x_1 x_2$. At the same
+time, we can't get any quadratic out of this, because we're missing $x_1^2$ and
+$x_2^2$. 
+
 \subsection{Thin-plate splines}
 
-\section{RKHS methods}
 
-\section{Linear smoothers}
+
+\section{RKHS methods}
 
 \bibliographystyle{plainnat}
 \bibliography{../../common/ryantibs.bib}
